--- a/main.css
+++ b/main.css
@@ -1,24 +1,15 @@
 :root {
     font-size:16px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    --border : #A7A7A7
-}
-
-.homeheader
-{
-    background-color: #38204c;
-    width: 100vw;
-    height: 5%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: row;
+    --border : #A7A7A7;
 }
 
 body
 {
-    background-image: -webkit-linear-gradient(0deg,
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    background-image: linear-gradient(45deg,
   hsl(273deg 41% 21%) 0%,
   hsl(266deg 28% 30%) 9%,
   hsl(260deg 20% 38%) 18%,
@@ -32,4 +23,48 @@ body
   hsl(28deg 76% 92%) 91%,
   hsl(33deg 100% 94%) 100%
     );
+}
+
+.homecontainer
+{
+    padding: 0;
+    margin:0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.webheader
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    position: sticky;
+    width: 100%;
+    height: 5%;
+    background-color: #301D3D;
+}
+
+.headercontent
+{
+    font-size: 20px;
+    color:white;
+    padding: 8px;
+    padding-left: 35px;
+    font-weight: 600;
+
+}
+
+.postcontainer
+{
+    background-color: #fff2e2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    height: 100%;
+    border-radius: 8px;
 }
