--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
     font-size:16px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Roboto", sans-serif;
     --border : #A7A7A7;
 }
 
@@ -43,13 +45,13 @@ body
     justify-content: left;
     position: sticky;
     width: 100%;
-    height: 5%;
+    height: 7%;
     background-color: #301D3D;
 }
 
 .headercontent
 {
-    padding-top: 8px;
+    align-items: center;
     font-size: 20px;
     color:white;
     font-weight: 600;
@@ -60,52 +62,178 @@ body
 }
 
 .headerhome
-{   
-    text-align: center;
+{
+    display: flex;
+    align-items: center;
+    padding-left: 5vw;
     height: 100%;
     width: 30%;
 }
 
+.link
+{
+    font-size: 26px;
+}
+
 .headersearchbar
 {
-    text-align: center;
+    display: flex;
+    align-items: center;
     height: 100%;
     width: 60%;
 }
 
 .searchbar
 {
-    background: rgb(255, 255, 255, 0.2);
-    opacity: 0.4;
+    background-color: rgba(124, 118, 152,0.5);
     width: 100%;
     height: 80%;
     border-radius: 20px;
     display: flex;
     align-items: center;
+    border: 0;
 }
 
-.searchbar input
+.searchbar input 
 {
     background: transparent;
     flex: 1;
     border: 0;
     outline: none;
+    padding: 10px;
+    color: white;
+    font-size: 16px;
+    padding-left: 5px;
 }
 
-.headericons
+.searchbar:hover 
 {
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.headerprofile
+{
+    padding-top: 0px;
+    margin: 0;
+    padding-left: 10px;
     height: 100%;
     width: 30%;
+    display: flex;
+    flex-direction: row;
+}
+
+.profile
+{
+    height: 100%;
+    width: 70%;
+}
+
+.createpost
+{
+    object-fit: fill;
+    margin-top: 10px;
+    width: 60%;
+    height: 10%;
+    background-color: #fff2e2;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    max-width: 600px;
+}
+
+.createposticon
+{
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.createpostusericonholder
+{
+    height: 65%;
+    border-style: solid;
+    border-color: #301D3D;
+    border-width: 1px;
+    width: 50%;
+    border-radius: 100%;
+}
+
+.createpostusericonholder img
+{
+    border-radius: 100%;
+    width: 100%;
+}
+
+.createposttext
+{
+    width: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.posttext
+{
+    margin: auto;
+    background: #fff2e2;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    border: 0;
+    border-color: #7c7698;
+    border-style: solid;
+    border-width: 1px;
+    width: 90%;
+    height: 50%;
+}
+
+.posttext input 
+{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 10px;
+    color: white;
+    font-size: 16px;
+    padding-left: 5px;
+}
+
+.posttext:hover
+{
+    border-color: #301D3D;
+    background-color: #7c7698;
+}
+
+.createpostpic
+{
+    width: 15%;
     border: solid;
+}
+
+.createpostattach
+{
+    width: 15%;
+    border: solid;
+}
+
+.navigation
+{
+    margin-top: 10px;
+    width: 60%;
+    height: 10%;
+    background-color: #fff2e2;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
 }
 
 .postscontainer
 {
+    margin-top: 10px;
     background-color: #fff2e2;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 60%;
     height: 100%;
     border-radius: 8px;
