--- a/Sign_in.css
+++ b/Sign_in.css
@@ -2,6 +2,10 @@
     font-size:16px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     --border : #A7A7A7
+    
+}
+body{
+    margin: 0;
 }
 .link{
     color: black;
@@ -13,21 +17,42 @@
     position: fixed;
     width: 100%;
     height: 5%;
-    border-bottom: 1px solid;
+    border-bottom: 2px solid;
+    background-color: #301D3D;
+    
 }
 
 .headercontent{
     font-size: 20px;
-    margin: 8px;
-    margin-left: 35px;
+    padding: 8px;
+    padding-left: 35px;
     font-weight: 600;
+    
 }
 .signcontainer{
     
+    background-image: linear-gradient(
+  45deg,
+  hsl(273deg 41% 21%) 0%,
+  hsl(266deg 28% 30%) 9%,
+  hsl(260deg 20% 38%) 18%,
+  hsl(254deg 15% 47%) 27%,
+  hsl(267deg 14% 55%) 36%,
+  hsl(321deg 17% 63%) 45%,
+  hsl(349deg 26% 74%) 55%,
+  hsl(10deg 39% 83%) 64%,
+  hsl(18deg 50% 87%) 73%,
+  hsl(23deg 61% 90%) 82%,
+  hsl(28deg 76% 92%) 91%,
+  hsl(33deg 100% 94%) 100%
+);
+   
     margin: auto;
-    width: 40%;
+    padding: 30%;
 }
 .container{
+    background: rgba(252, 250, 238, 0.41);
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +69,7 @@
 
 }
 .logo{
-    margin: 10px;
+    padding: 10px;
 }
 .header{
    margin: 20px;
@@ -76,5 +101,8 @@ input[type="text"], [type = "password"] {
     height: 50px;
     width: 250px;
     cursor: pointer;
+    border: 1px solid ;
+    border-radius: 15px;
 }
+
 
