--- a/Sign_up.css
+++ b/Sign_up.css
@@ -3,6 +3,9 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     --border : #A7A7A7
 }
+body{
+    margin: 0;
+}
 .link{
     color: black;
 }
@@ -13,7 +16,9 @@
     position: fixed;
     width: 100%;
     height: 5%;
-    border-bottom: 1px solid;
+    border-bottom: 2px solid;
+    background-color: #301D3D;
+
 }
 
 .headercontent{
@@ -23,11 +28,27 @@
     font-weight: 600;
 }
 .signcontainer{
-    
+    background-image: linear-gradient(
+  45deg,
+  hsl(273deg 41% 21%) 0%,
+  hsl(266deg 28% 30%) 9%,
+  hsl(260deg 20% 38%) 18%,
+  hsl(254deg 15% 47%) 27%,
+  hsl(267deg 14% 55%) 36%,
+  hsl(321deg 17% 63%) 45%,
+  hsl(349deg 26% 74%) 55%,
+  hsl(10deg 39% 83%) 64%,
+  hsl(18deg 50% 87%) 73%,
+  hsl(23deg 61% 90%) 82%,
+  hsl(28deg 76% 92%) 91%,
+  hsl(33deg 100% 94%) 100%
+);
+   
     margin: auto;
-    width: 40%;
+    padding: 30%;
 }
 .container{
+    background: rgba(252, 250, 238, 0.41);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,5 +97,9 @@ input[type="text"], [type = "password"] {
     height: 50px;
     width: 250px;
     cursor: pointer;
+    border: 1px solid ;
+    border-radius: 15px;
 }
+
+
 
