--- a/Sign_in.css
+++ b/Sign_in.css
@@ -109,8 +109,8 @@ input[type="text"], [type = "password"] {
 
 .noAccount{
     font-size: 12px;
+    padding-left: 4px;
 }
-
 .submitbutton{
     font-size: 18px;
     margin-top: 10px;
