--- a/Sign_up.css
+++ b/Sign_up.css
@@ -1,33 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 :root {
     font-size:16px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Roboto", sans-serif;
     --border : #A7A7A7
 }
 body{
     margin: 0;
-}
-.link{
-    color: black;
-}
-.webheader{
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    position: fixed;
-    width: 100%;
-    height: 5%;
-    border-bottom: 2px solid;
-    background-color: #301D3D;
-
-}
-
-.headercontent{
-    font-size: 20px;
-    margin: 8px;
-    margin-left: 35px;
-    font-weight: 600;
-}
-.signcontainer{
     background-image: linear-gradient(
   45deg,
   hsl(273deg 41% 21%) 0%,
@@ -42,13 +20,47 @@ body{
   hsl(23deg 61% 90%) 82%,
   hsl(28deg 76% 92%) 91%,
   hsl(33deg 100% 94%) 100%
+  
 );
+    background-attachment: fixed;
+}
+.link{
+    padding-top: 13px;
+    float: right;
+}
+.webheader{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    position: fixed;
+    width: 100%;
+    height: 5%;
+    border-bottom: 2px solid;
+    background: rgb(48,29,61);
+    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
+    
+}
+.logo{
    
+    height: 30px;
+    width: 55px;
+    float:left;
+    max-width: 100%;
+    max-height:100%;
+}
+.headercontent{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    
+}
+.signcontainer{   
     margin: auto;
     padding: 30%;
 }
 .container{
-    background: rgba(252, 250, 238, 0.41);
+    background: rgba(255, 242, 226, 0.5);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,6 +75,9 @@ body{
     border: 1px solid var(--border);
 
 
+}
+.blocktitle{
+    font-weight: 1000;
 }
 .logo{
     margin: 10px;
@@ -80,6 +95,8 @@ input[type="text"], [type = "password"] {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+    background-color: #FFFBF4;
+
 }
 .remember{
     font-size: 13px;
@@ -91,7 +108,7 @@ input[type="text"], [type = "password"] {
 
 .submitbutton{
     font-size: 18px;
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 10px, 20px;
     color: black;
     height: 50px;
@@ -99,6 +116,19 @@ input[type="text"], [type = "password"] {
     cursor: pointer;
     border: 1px solid ;
     border-radius: 15px;
+    border: 0.5px solid #BD8FCB;
+    background-color: #BD8FCB;
+    font-weight: 1000;
+}
+.submitbutton:hover{
+    border: 1px solid #7A03A1;
+    background-color: #7A03A1;
+
+}
+
+.buttontext{
+    color:beige;
+    
 }
 
 
