--- a/Sign_up.css
+++ b/Sign_up.css
@@ -98,12 +98,10 @@ input[type="text"], [type = "password"] {
     background-color: #FFFBF4;
 
 }
-.remember{
-    font-size: 13px;
-}
 
 .noAccount{
     font-size: 12px;
+    padding-left: 28px;
 }
 
 .submitbutton{
@@ -119,6 +117,7 @@ input[type="text"], [type = "password"] {
     border: 0.5px solid #BD8FCB;
     background-color: #BD8FCB;
     font-weight: 1000;
+    margin-left: 6px;
 }
 .submitbutton:hover{
     border: 1px solid #7A03A1;
@@ -130,6 +129,7 @@ input[type="text"], [type = "password"] {
     color:beige;
     
 }
+
 
 
 
