--- a/profilepage.css
+++ b/profilepage.css
@@ -30,11 +30,14 @@ body
 .webheader{
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: left;
     position: sticky;
     width: 100%;
     height: 5%;
-    background-color: #301D3D;
+    border-bottom: 2px solid;
+    background: rgb(48,29,61);
+    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
 }
 
 .headercontent{
@@ -46,8 +49,17 @@ body
 }
 
 .logo{
-    margin: 10px;
-    color: beige;
+   
+    height: 30px;
+    width: 55px;
+    float:left;
+    max-width: 100%;
+    max-height:100%;
+}
+
+.link{
+    padding-top: 13px;
+    float: right;
 }
 
 .searchbar
@@ -97,6 +109,9 @@ body
     background-color: rgb(142, 9, 204);
     color: black;
 }
+.topbuttons a:active {
+    background-color:rgb(166, 9, 223)
+}
 
 .mainpage {
     margin: 10px;
@@ -109,7 +124,7 @@ body
     margin: auto;
     overflow-wrap: normal;
     border-radius: 8px;
-    background-color: white;
+    background: rgba(255, 242, 226, 0.5);
     flex-direction: row;
 }
 
@@ -154,14 +169,14 @@ body
     color: black;
     font-size: 14px;
     display:block;
-    background-color: rgb(130, 0, 251);
+    background-color: #BD8FCB;
     margin: auto;
     padding: 7px;
     border-radius: 5px;
 }
 
 .editbutton a:hover {
-    background-color: rgb(101, 4, 137);
+    background-color: #7A03A1;
 }
 
 .profileinfo {
@@ -209,11 +224,11 @@ body
 .latestpost {
     display: flex;
     flex-direction: row;
-    width: 650px;
+    width: 650px;   
     height: auto;
     margin: auto;
     border-radius: 7px;
-    background-color: white;
+    background: rgba(255, 242, 226, 0.5);
 }
 
 .latestpostinfo {
@@ -258,4 +273,14 @@ body
 
 .latestpostsdetails p {
     font-size: 12px;
+}
+
+.latestpostsdetails a {
+    text-decoration: none;
+    color: black;
+}
+
+.latestpostsdetails a:hover {
+    text-decoration: underline;
+    color: black;
 }
