--- a/viewpost.css
+++ b/viewpost.css
@@ -28,11 +28,14 @@ body
 .webheader{
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: left;
     position: sticky;
     width: 100%;
     height: 5%;
-    background-color: #301D3D;
+    border-bottom: 2px solid;
+    background: rgb(48,29,61);
+    background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
 }
 
 .headercontent{
@@ -44,8 +47,17 @@ body
 }
 
 .logo{
-    margin: 10px;
-    color: beige;
+   
+    height: 30px;
+    width: 55px;
+    float:left;
+    max-width: 100%;
+    max-height:100%;
+}
+
+.link{
+    padding-top: 13px;
+    float: right;
 }
 
 .searchbar
@@ -81,14 +93,14 @@ body
     margin-bottom: 5px;
     margin-left: 15px;
     margin-right: 15px;
-    overflow: clip;
 }
 
 .topbuttons a{
     text-decoration: none;
     text-align: center;
     color: beige;
-    padding: 10px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
+    background-color: #BD8FCB;
 }
 
 .topbuttons a:hover {
@@ -96,6 +108,9 @@ body
     color: black;
 }
 
+.topbuttons a:active {
+    background-color:rgb(166, 9, 223)
+}
 .postcontainer {
   
     display: flex;
@@ -104,7 +119,7 @@ body
     margin: auto;
     overflow-wrap: normal;
     border-radius: 8px;
-    background-color: white;
+    background-color: rgba(255, 242, 226, 0.5);
 }
 .mainpage {
     margin: 10px;
@@ -172,14 +187,14 @@ body
     color: black;
     font-size: 14px;
     display:block;
-    background-color: rgb(130, 0, 251);
+    background-color: #BD8FCB;
     margin: auto;
     padding: 5px;
     border-radius: 5px;
     
 }
 .replybutton a:hover {
-    background-color: rgb(101, 4, 137);
+    background-color: #7A03A1;
 
 }
 
@@ -193,7 +208,7 @@ body
     height: auto;
     margin: auto;
     border-radius: 7px;
-    background-color: white;
+    background-color: rgba(255, 242, 226, 0.5);
 }
 
 .replyinfo {
