--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body
 {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
     background-image: linear-gradient(45deg,
   hsl(273deg 41% 21%) 0%,
   hsl(266deg 28% 30%) 9%,
@@ -36,6 +36,7 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 .webheader
@@ -45,7 +46,6 @@ body
     justify-content: left;
     position: sticky;
     width: 100%;
-    height: 7%;
     background-color: #301D3D;
 }
 
@@ -58,7 +58,7 @@ body
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
 }
 
 .headerhome
@@ -66,7 +66,7 @@ body
     display: flex;
     align-items: center;
     padding-left: 5vw;
-    height: 100%;
+    height: 45px;
     width: 30%;
 }
 
@@ -132,11 +132,12 @@ body
 {
     margin-top: 10px;
     width: 650px;
-    height: 110px;
     background-color: #fff2e2;
     border-radius: 8px;
     display: flex;
     flex-direction: row;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .createposticon
@@ -149,11 +150,11 @@ body
 
 .createpostusericonholder
 {
-    height: 65%;
+    height: 50px;
     border-style: solid;
     border-color: #301D3D;
     border-width: 1px;
-    width: 50%;
+    width: 50px;
     border-radius: 100%;
 }
 
@@ -182,7 +183,7 @@ body
     border-style: solid;
     border-width: 1px;
     width: 90%;
-    height: 50%;
+    height: 90%;
 }
 
 .posttext input 
@@ -200,7 +201,7 @@ body
 .posttext:hover
 {
     border-color: #301D3D;
-    background-color: #7c7698;
+    background-color: #ebd3cb;
 }
 
 .createpostpic
@@ -237,7 +238,8 @@ body
 {
     margin-top: 10px;
     width: 650px;
-    height: 110px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     background-color: #fff2e2;
     border-radius: 8px;
     display: flex;
