--- a/CreatePost.css
+++ b/CreatePost.css
@@ -24,6 +24,16 @@ body{
 
     
 }
+.headercontainer{
+    padding: 0;
+    margin:0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
 .link{
     padding-left: 10px;
     padding-top: 3px;
@@ -34,13 +44,13 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: left;
     position: fixed;
     width: 100%;
     height: 5%;
     border-bottom: 2px solid;
     background: rgb(48,29,61);
     background: linear-gradient(90deg, rgba(48,29,61,1) 0%, rgba(65,37,84,1) 35%, rgba(66,33,88,1) 63%, rgba(79,37,108,1) 100%);
+    
     
 }
 .logo{
@@ -52,6 +62,11 @@ body{
     max-height:100%;
 }
 .headercontent{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    height: 100%;
+    width: 70%;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
@@ -60,9 +75,77 @@ body{
 
 .signcontainer{
     
-    padding: 10%;
+    margin-right: 80%;
+}
+.headerprofile
+{
+    padding-top: 0px;
+    margin: 0;
+    height: 100%;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    padding-right: 4vw;
+    
 }
 
+.profile
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    height: 100%;
+    width: 70%;
+}
+
+.profileicon
+{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-right: 4px;
+}
+
+.profileiconholder
+{
+    border-width: 1px;
+    border-color: #ebd3cb;
+    border-style: solid;
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+}
+
+.profileiconholder img 
+{
+    border-radius: 100%;
+    width: 100%;
+}
+
+.profilehandlecontainer
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    width: 70%;
+    height: 100%;
+}
+
+.profiledisplayname
+{
+    color:#ebd3cb;
+    font-size: 12px;
+}
+
+.profilehandlename
+{
+    color:#ebd3cb;
+    font-size: 8px;
+}
 .container{
     background-color: #fff2e2;
     background: rgba(255, 242, 226, 0.5);
