--- a/main_community.css
+++ b/main_community.css
@@ -391,12 +391,12 @@ body
 {
     margin-top: 10px;
     width: 650px;
-    padding-top: 10px;
-    padding-bottom: 10px;
     background-color: #fff2e2;
     border-radius: 8px;
     display: flex;
     flex-direction: row;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .createposticon
@@ -421,12 +421,6 @@ body
 {
     width: 100%;
     border-radius: 100%;
-}
-
-.createpostusericonholder img
-{
-    border-radius: 100%;
-    width: 100%;
 }
 
 .createposttext
@@ -475,6 +469,12 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
+}
+
+.createpostpic:hover
+{
+   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .createpostpic img
@@ -490,6 +490,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .createpostattach img
@@ -497,6 +498,11 @@ body
     width: 24px;
     height: 24px;
     object-fit: fill;
+}
+
+.createpostattach:hover
+{
+   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .navigation
@@ -585,6 +591,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .newposts img
@@ -594,6 +601,11 @@ body
     object-fit: fill;
 }
 
+.newposts:hover
+{
+   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 .hotposts
 {
     height: 100%;
@@ -601,6 +613,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 
 .hotposts img
@@ -610,13 +623,172 @@ body
     object-fit: fill;
 }
 
+.hotposts:hover
+{
+   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 .postscontainer
 {
     margin-top: 10px;
     background-color: #fff2e2;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 650px;
-    height: 640px;
     border-radius: 8px;
+}
+
+.postheader
+{
+    padding-left: 10px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+}
+
+.communityposticonholder
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+}
+
+.communityposticon
+{
+    border-width: 1px;
+    border-color: #38204c;
+    border-style: solid;
+    height: 35px;
+    width: 35px;
+    border-radius: 100%;
+}
+
+.communityposticon img
+{
+    border-radius: 100%;
+}
+
+.userpostname
+{
+    color:#301D3D;
+}
+
+.postedby
+{
+    color:#301D3D;
+    font-weight: bold;
+}
+
+.postedon
+{
+    color:#301D3D;
+    font-weight: bold;
+}
+
+.postdate
+{
+    font-size: 12px;
+}
+
+.posttextcontent
+{
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    border: solid 1px #301D3D;
+    padding: 10px;
+    background-color: #fff2e2;
+    border-radius: 10px;
+    word-wrap: break-word;
+    overflow: hidden;
+    width: 600px;
+}
+
+.postfooter
+{
+    width: 620px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.upbit
+{
+    width: 24px;
+    height: 24px;
+}
+
+.upbit img
+{
+    border-radius: 4px;
+    width: 100%;
+}
+
+.upbit img:hover
+{
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.downbit
+{
+    width: 24px;
+    height: 24px;
+}
+
+.downbit img
+{
+    border-radius: 4px;
+    width: 100%;
+}
+
+.downbit img:hover
+{
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.comment
+{
+    width: 24px;
+    height: 24px;
+}
+
+.comment img
+{
+    border-radius: 4px;
+    width: 100%;
+}
+
+.comment img:hover
+{
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.share
+{
+    width: 24px;
+    height: 24px;
+}
+
+.share img
+{
+    border-radius: 4px;
+    width: 100%;
+}
+
+.share img:hover
+{
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.commentcounter
+{
+    padding-left: 10px;
+    font-size: 12px;
 }
