--- a/main.css
+++ b/main.css
@@ -8,9 +8,9 @@
 
 body
 {
+    background-attachment: fixed;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-image: linear-gradient(45deg,
   hsl(273deg 41% 21%) 0%,
   hsl(266deg 28% 30%) 9%,
@@ -29,6 +29,7 @@ body
 
 .homecontainer
 {
+    overflow-x: hidden;
     padding: 0;
     margin:0;
     height: 100vh;
@@ -36,7 +37,6 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
 }
 
 .webheader
@@ -481,6 +481,8 @@ body
 
 .communityposticon img
 {
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
 }
 
@@ -506,6 +508,14 @@ body
     font-size: 12px;
 }
 
+.posttitleheader
+{
+    width: 600px;
+    font-weight: bold;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
 .posttextcontent
 {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
@@ -516,6 +526,22 @@ body
     word-wrap: break-word;
     overflow: hidden;
     width: 600px;
+}
+
+.postpicturecontent
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+}
+
+.postpicturecontent img
+{
+    border-radius: 10px;
 }
 
 .postfooter
@@ -601,4 +627,10 @@ body
 {
     padding-left: 10px;
     font-size: 12px;
+}
+
+a
+{
+    text-decoration: none;
+    color: black;
 }
