--- a/main_community.css
+++ b/main_community.css
@@ -8,9 +8,9 @@
 
 body
 {
+    background-attachment: fixed;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-image: linear-gradient(45deg,
   hsl(273deg 41% 21%) 0%,
   hsl(266deg 28% 30%) 9%,
@@ -29,6 +29,7 @@ body
 
 .homecontainer
 {
+    overflow-x: hidden;
     padding: 0;
     margin:0;
     height: 100vh;
@@ -36,7 +37,6 @@ body
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
 }
 
 .webheader
@@ -197,12 +197,38 @@ body
     font-size: 8px;
 }
 
+.topbuttons {
+    display: flex;
+    float: right;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 16px;
+    flex-direction: row;
+    background: transparent;
+    border-radius: 10px;
+}
+
+.topbuttons a{
+    text-decoration: none;
+    text-align: center;
+    color: beige;
+    padding: 5px;
+}
+
+.topbuttons a:hover {
+    background-color: #7903a1c8;
+    border-radius: 10px;
+}
+
 .communitybanner
 {
     border-radius: 10px;
     width: 1280px;
-    height: 228px;
-    background: url("./images main/apple_banner.jpg") no-repeat scroll center transparent;
+    min-height: 228px;
+    background-image: url("./images main/apple_banner.jpg");
+    background-position: 50% 50%;
 }
 
 .communityiconinfo
@@ -671,6 +697,8 @@ body
 
 .communityposticon img
 {
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
 }
 
@@ -696,6 +724,14 @@ body
     font-size: 12px;
 }
 
+.posttitleheader
+{
+    width: 600px;
+    font-weight: bold;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
 .posttextcontent
 {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
@@ -706,6 +742,22 @@ body
     word-wrap: break-word;
     overflow: hidden;
     width: 600px;
+}
+
+.postpicturecontent
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+}
+
+.postpicturecontent img
+{
+    border-radius: 10px;
 }
 
 .postfooter
@@ -791,4 +843,10 @@ body
 {
     padding-left: 10px;
     font-size: 12px;
+}
+
+a
+{
+    text-decoration: none;
+    color: black;
 }
