--- a/main.css
+++ b/main.css
@@ -197,6 +197,31 @@ body
     font-size: 8px;
 }
 
+.topbuttons {
+    display: flex;
+    float: right;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 16px;
+    flex-direction: row;
+    background: transparent;
+    border-radius: 10px;
+}
+
+.topbuttons a{
+    text-decoration: none;
+    text-align: center;
+    color: beige;
+    padding: 5px;
+}
+
+.topbuttons a:hover {
+    background-color: #7903a1c8;
+    border-radius: 10px;
+}
+
 .createpost
 {
     margin-top: 10px;
