--- a/views/CreatePost.html
+++ b/views/CreatePost.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="CreatePost.css"/>
+    <link rel="stylesheet" type="text/css" href="/public/css/CreatePost.css"/>
 </head>
 
 <body>
@@ -8,7 +8,7 @@
         <div class = "headercontent">
             <div class="headerhome">
                 <div class="websitelogo">
-                    <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                    <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                     <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                 </div>
             </div>
@@ -20,7 +20,7 @@
                     <div class="profileicon">
                         <div class="profileiconholder">
                             <a href="./profilepage2.html">
-                            <img src="./images main/pfp.jpg"/>
+                            <img src="/public/img/pfp.jpg"/>
                             </a>
                         </div>
                     </div>
@@ -50,13 +50,13 @@
                 </div>
                 <div class = "icons">
                     <button class = "iconbutton" type = "submit">
-                        <img class ="attach" src = "Create_images/attach.png" title="Attach a file">
+                        <img class ="attach" src = "/public/img/attach.png" title="Attach a file">
                     </button>
                     <button class = "iconbutton" type = "submit">
-                        <img class ="bold" src = "Create_images/bold.png" title = "Embolden">
+                        <img class ="bold" src = "/public/img/bold.png" title = "Embolden">
                     </button>
                     <button class = "iconbutton" type = "submit">
-                        <img class ="italic" src = "Create_images/italics.png" title = "Italicize">
+                        <img class ="italic" src = "/public/img/italics.png" title = "Italicize">
                     </button>
                 </div>
                 <div class = "contentarea">
