--- a/views/Sign_in.html
+++ b/views/Sign_in.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="Sign_in.css"/>
+    <link rel="stylesheet" type="text/css" href="/public/css/Sign_in.css"/>
 </head>
 <body>
     <div class="homecontainer">
@@ -8,7 +8,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
