--- a/views/Sign_up.html
+++ b/views/Sign_up.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="Sign_up.css"/>
+    <link rel="stylesheet" type="text/css" href="/public/css/Sign_up.css"/>
 </head>
 <body>
 
@@ -9,7 +9,7 @@
             <div class = "headercontent">
                 <div class="headerhome">
                     <div class="websitelogo">
-                        <a href="./main.html"><img src="./images main/byte_logo.png"/></a>
+                        <a href="./main.html"><img src="/public/img/byte_logo.png"/></a>
                         <span class = "link"> <a style = "color: beige; text-decoration: none" href = "./main.html"> byte. </a> </span>
                     </div>
                 </div>
